Trying to fix the memory leak