@@ -1567,11 +1567,11 @@ for(String sentence : allSentences) {
                                                                           boolean disambiguate) {
 
         Pair<List<List<Dataset>>, List<BibDataSet>> tei = null;
-        try {
+        try (StringReader reader = new StringReader(documentAsString);){
             DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
             factory.setNamespaceAware(true);
             DocumentBuilder builder = factory.newDocumentBuilder();
-            org.w3c.dom.Document document = builder.parse(new InputSource(new StringReader(documentAsString)));
+            org.w3c.dom.Document document = builder.parse(new InputSource(reader));
             //document.getDocumentElement().normalize();
             org.w3c.dom.Element root = document.getDocumentElement();
             if (segmentSentences)
@@ -2253,7 +2253,7 @@ for(String sentence : allSentences) {
 
         // mark datasets present in Data Availability section(s)
         if (CollectionUtils.isNotEmpty(availabilitySequences)) {
-            List<LayoutToken> availabilityTokens = availabilitySequences.stream().flatMap(as -> as.getTokens().stream()).toList();
+            List<LayoutToken> availabilityTokens = availabilitySequences.stream().flatMap(as -> as.getTokens().stream()).collect(Collectors.toList());
             entities = markDAS(entities, availabilityTokens);
         }
 
